#19 - fix: 에러케이스 세분화 및 트랜잭션 DTO 통합.
- enum 타입으로 트랜잭션 타입 구분
- 에러 발생 케이스 세분화